# akasha-library

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Readme.md
.github/workflows/: rust.yml
src/: lib.rs
src/crypto/: mod.rs  model.rs  service.rs
src/crypto/service/: coingecko.rs  mod.rs
src/database/: crypto.rs  fiat.rs  investment.rs  mod.rs
src/fiat/: mod.rs  readme.md
src/fiat/service/: fixer_api.rs  mod.rs
src/money_investment/: mod.rs  service.rs
src/plugin/database/: surrealdb.rs
tests/: coingecko_e2e_test.rs  fiat_e2e_test.rs  investment_e2e_test.rs  mod.rs
tests/mocks/: mockInvestmentDB.rs  mock_fiat_service.rs  mock_investment_data.rs  mock_investmentdb.rs  mod.rs
