[package]
name = "akasha"
version = "0.1.0"
authors = ["Darwin Subramaniam <darwinsubramaniam@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features = ["derive"]}
reqwest = {version="0.11", features = ["json"]}
async-trait = "0.1.57"
chrono = {version="0.4", features = ["serde"]}

[dev-dependencies]
tokio-test = "*"
toml = "0.5"
